Added orderSize to headers